--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  box-shadow:  0px 5px 20px rgb(80, 76, 76);
   margin: auto;
   height: auto;
   width: auto;
