--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   border-radius: 20px;
   box-shadow:  0px 5px 20px rgb(80, 76, 76);
   margin: auto;
+  margin-top: 1vh;
   
 }
 
@@ -109,26 +110,39 @@
   transform: scale(2)
 }
 
-
 .recipePage{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  background-color: white;
   box-shadow:  0px 5px 20px rgb(80, 76, 76);
+  border-radius: 10px;
   margin: auto;
+  margin-top: 4vh;
   height: auto;
-  width: auto;
+  width: 65vw;
+  max-width: 800px;
+  padding: 3vh;
 }
 
 .recipePage label{
-  font-size: 5vh;
-  margin: 20px;
+  font-size: 4vh;
+  font-weight: bold;
 } 
 
+.recipePageImgDiv {
+  text-align: center;
+  margin-top: 3vh;
+}
+
  .recipePage img{
-  width:100%; 
+  width:30vh; 
   height:auto; 
 } 
+
+.recipePageList {
+  font-weight: bold;
+}
 
 
 @media (min-width:600px)  {
