--- a/src/App.css
+++ b/src/App.css
@@ -1,131 +1,166 @@
 
 .titlePictureDiv{
-   text-align: center;
-   padding-top: 20px;
- }
+  text-align: center;
+  padding-top: 20px;
+}
 
 
 .titlePicture{
-  height: 10vh;
+ height: 10vh;
 }
 
 
 .subTitle{
-   text-align: center;
-   font-size: 2.5vh;
-   flex-wrap: wrap;
-   width: auto;
-   height: auto;
- }
+  text-align: center;
+  font-size: 2.5vh;
+  flex-wrap: wrap;
+  width: auto;
+  height: auto;
+}
 
 
 .App {
-  min-height: 100vh;
-  background-image: url("pics/background.jpg");
-  background-size: contain;
-  
+ min-height: 100vh;
+ background-image: url("pics/background.jpg");
+ background-size: contain;
+ 
 }
 
 
 .search-form{
-  min-height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+ min-height: 10vh;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 
 .search-bar{
-  width: 50%;
-  border: none;
-  padding: 10px;
-  border-radius: 20px;
+ width: 50%;
+ border: none;
+ padding: 10px;
+ border-radius: 20px;
 }
 
 
 .search-button{
-  background: rgb(219, 18, 18);
-  border: none;
-  padding: 10px 20px;
-  color: white;
-  border-radius: 20px;
-  margin-right: 10px;
+ background: rgb(219, 18, 18);
+ border: none;
+ padding: 10px 20px;
+ color: white;
+ border-radius: 20px;
+ margin-right: 10px;
 }
 
 
 .recipes{
-  display: flex;
-  justify-content: baseline;
-  flex-wrap: wrap;
+ display: flex;
+ justify-content: baseline;
+ flex-wrap: wrap;
 }
 
 
 .recipe{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background: white;
-  border-radius: 20px;
-  box-shadow:  0px 5px 20px rgb(80, 76, 76);
-  margin: auto;
-  
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ background: white;
+ border-radius: 20px;
+ box-shadow:  0px 5px 20px rgb(80, 76, 76);
+ margin: auto;
+ margin-top: 1vh;
+ 
 }
 
 
 .recipeImageRow{
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  background: white;
+ margin: auto;
+ display: flex;
+ flex-direction: column;
+ background: white;
 }
 
 
 .image{
-  border-radius: 10%;
-  max-height: 50vh;
-  max-width: 50vw;
+ border-radius: 10%;
+ max-height: 50vh;
+ max-width: 50vw;
 }
 
 
 .recipeDetailsRow{
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-right: 0.7vh;
+ position: relative;
+ display: flex;
+ flex-direction: column;
+ margin-right: 0.7vh;
 }
 
 .moreRecipesBtn{
-  border: none;
-  background-color: transparent;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: red;
-  font-size: 2.2vh;
-  transition: all .3s ease-in-out;
+ border: none;
+ background-color: transparent;
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ color: red;
+ font-size: 2.2vh;
+ transition: all .3s ease-in-out;
 }
 
 .moreRecipesBtn:hover{
-  transform: scale(2)
+ transform: scale(2)
+}
+
+.recipePage{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ background-color: white;
+ box-shadow:  0px 5px 20px rgb(80, 76, 76);
+ border-radius: 10px;
+ margin: auto;
+ margin-top: 4vh;
+ height: auto;
+ width: 65vw;
+ max-width: 800px;
+ padding: 3vh;
+}
+
+.recipePage label{
+ font-size: 4vh;
+ font-weight: bold;
+} 
+
+.recipePageImgDiv {
+ text-align: center;
+ margin-top: 3vh;
+}
+
+.recipePage img{
+ width:30vh; 
+ height:auto; 
+} 
+
+.recipePageList {
+ font-weight: bold;
 }
 
 
 @media (min-width:600px)  {
-  .recipe{
-    max-width: 44vw; 
-  }
-  .image{
-    max-width: 22vw; 
-  }
+ .recipe{
+   max-width: 44vw; 
+ }
+ .image{
+   max-width: 22vw; 
+ }
 }
 
 
 @media (min-width:1025px)  {
-  .recipe{
-    margin: 1.5vh;
-    max-width: 31vw; 
-  }
-  .image{
-    max-width: 15vw; 
-  }
+ .recipe{
+   margin: 1.5vh;
+   max-width: 31vw; 
+ }
+ .image{
+   max-width: 15vw; 
+ }
 }
