--- a/src/App.css
+++ b/src/App.css
@@ -350,15 +350,14 @@
 	display: none;
 }
 
-/* Giving a background-color to the nav container. */
+/* Nav background-color*/
 .navTop nav { 
 	margin:0;
 	padding: 0;
 	background-color: #254441;
 }
 
-/* Removing padding, margin and "list-style" from the "ul",
- * and adding "position:reltive" */
+/*ul*/
  .navTop nav ul {
 	padding:0;
 	margin:0;
@@ -366,14 +365,14 @@
 	position: relative;
 	}
 	
-/* Positioning the navigation items inline */
+/* li */
 .navTop nav ul li {
 	margin: 0px;
 	display:inline-block;
 	background-color: #254441;
 	}
 
-/* Styling the links */
+/*a*/
 .navTop nav a {
 	display:block;
 	padding:14px 20px;	
@@ -383,13 +382,12 @@
 }
 
 
-/* Background color change on Hover */
+/* Background color on Hover */
 .navTop nav a:hover { 
 	background-color: #000000; 
 }
 
-/* Hide Dropdowns by Default
- * and giving it a position of absolute */
+/* Hide Dropdowns by Default */
  .navTop nav ul ul {
 	display: none;
 	position: absolute; 
@@ -401,7 +399,7 @@
 	display:inherit;
 }
 	
-/* Fisrt Tier Dropdown */
+/* Dropdown */
 .navTop nav ul ul li {
 	width:170px;
 	float:none;
@@ -411,21 +409,20 @@
 
 
 
-/* Media Queries
---------------------------------------------- */
-
+/*Menu Media */
+/*--------------------------------------------- */
 @media all and (max-width : 768px) {
 	.navTop nav {
 		margin: 0;
 	}
 
-	/* Hide the navigation menu by default */
+	/* Hide menu by default */
 	.navTop .toggle + a,
 	.navTop .menu {
 		display: none;
 	}
 
-	/* Styling the toggle lable */
+	/* toggle */
 	.navTop .toggle {
 		display: block;
 		background-color: #254441;
@@ -436,11 +433,12 @@
 		border:none;
 	}
 
+  /* toggle hover */
 	.navTop .toggle:hover {
 		background-color: #000000;
 	}
 
-	/* Display Dropdown when clicked on Parent Label */
+	/* Media Display Dropdown when clicked on Parent */
 	[id^=drop]:checked + ul {
 		display: block;
 	}
@@ -492,7 +490,7 @@
 		display: none;
 	}
 		
-	/* Fisrt Dropdown */
+	/* Dropdown */
 	.navTop nav ul ul li {
 		display: block;
 		width: 100%;
